style: enhance responsive design for sidebar and canvas components

--- a/client/src/components/atoms/form/Slider/Slider.css
+++ b/client/src/components/atoms/form/Slider/Slider.css
@@ -67,3 +67,12 @@
     width: 80px;
     height: 4px;
 }
+
+@media screen and (max-width: 768px){
+    .editor-timestep-controls{
+        position: absolute;
+        width: fit-content !important       ;
+        left: 50%;
+        transform: translateX(-50%) !important;
+    }
+}
