--- a/client/src/components/atoms/scene/SceneTopCenteredOptions/SceneTopCenteredOptions.css
+++ b/client/src/components/atoms/scene/SceneTopCenteredOptions/SceneTopCenteredOptions.css
@@ -14,6 +14,7 @@
     transform: translate(-50%, 0);
     display: flex !important;
     gap: 1rem;
+    align-items: center;
     flex-direction: row;
     height: 55px;
     margin: 0 auto;
@@ -26,9 +27,17 @@
         width: auto;
         gap: .1rem;
         top: 1rem;
+        z-index: 20;
     }
-    
-    .editor-sidebar-scene-option-icon-container{
-        font-size: 1rem;
+
+    .editor-top-centered-options-container .editor-sidebar-scene-option-icon-container{
+        font-size: .8rem;
+    }
+
+    .editor-top-centered-options-container{
+        position: absolute;
+        width: fit-content;
+        left: 50%;
+        transform: translateX(-50%) !important;
     }
 }
