--- a/client/src/pages/protected/Canvas/Canvas.css
+++ b/client/src/pages/protected/Canvas/Canvas.css
@@ -311,11 +311,12 @@
 
 @media screen and (max-width: 768px){
     .editor-scene-zoom-container{
-        padding: 0 1rem;
+        padding: 0 .8rem;
+        height: 25px;
         gap: .3rem;
     }
     
     .editor-scene-zoom{
-        font-size: .8rem;
+        font-size: .6rem;
     }
 }
