feat: add loader component for download progress and update download UI

--- a/client/src/components/molecules/raster/RasterScene/RasterScene.css
+++ b/client/src/components/molecules/raster/RasterScene/RasterScene.css
@@ -10,6 +10,12 @@
     }
 }
 
+.download-loader-container{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
 .raster-scene-topbar-right{
     position: relative;
     margin-left: auto;
