--- a/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
+++ b/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
@@ -743,7 +743,10 @@
   }
 
 .preloading-container{
-  top: 0.5rem;
+  top: .8rem;
+  right: unset;
+  left: 1.5rem;
+  z-index: 999999;
   font-size: 0.5rem;
 }
 
