feat: hide dashboard search and views containers in the raster scene header

--- a/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
+++ b/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
@@ -838,7 +838,15 @@
     min-width: max-content;
   }
 
-  .raster-scene-header-search-container{
+  .raster-scene-header-search-container .dashboard-search-container{
+    display: none;
+  }
+  
+  .raster-scene-header-views-container{
+    display: none;
+  }
+
+  .raster-scene-header-users-container{
     display: none;
   }
 }
