--- a/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
+++ b/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
@@ -846,6 +846,10 @@
     display: none;
   }
 
+  .btn-signin{
+    display: none;
+  }
+
   .raster-scene-header-users-container{
     display: none;
   }
