--- a/client/src/components/molecules/WindowIcons/WindowIcons.css
+++ b/client/src/components/molecules/WindowIcons/WindowIcons.css
@@ -14,7 +14,7 @@
     box-shadow:
         inset 0 0.5px 0 rgba(255, 255, 255, 0.7),
         inset 0 1px 2px rgba(0, 0, 0, 0.18);
-    cursor: default;
+    cursor: pointer;
     flex: 0 0 auto;
 }
 
