--- a/client/src/components/organisms/FrameAtomsTable/FrameAtomsTable.css
+++ b/client/src/components/organisms/FrameAtomsTable/FrameAtomsTable.css
@@ -1,11 +1,15 @@
 .frame-atoms-table-container{
-  z-index: 999999;
   width: 520px;
   max-height: 70vh;
   border-radius: .5rem;
   background-color: var(--color-bg);
   box-shadow: 0 12px 30px rgba(0,0,0,.25);
   width: 1000px;
+}
+
+.frame-atoms-table-draggable{
+  position: absolute;
+  z-index: 9999999999;
 }
 
 .frame-atoms-table-header-container{
