--- a/client/src/components/molecules/WindowIcons/WindowIcons.css
+++ b/client/src/components/molecules/WindowIcons/WindowIcons.css
@@ -4,6 +4,15 @@
     gap: 8px;
 }
 
+.window-icons-container{
+    position: absolute;
+    top: .8rem;
+    left: .8rem;
+    background-color: rgba(255, 255, 255, .5);
+    padding: .5rem 1rem;
+    border-radius: 5rem;
+}
+
 .window-icon-circle{
     position: relative;
     width: 12px;
