--- a/client/src/components/molecules/WindowIcons/WindowIcons.css
+++ b/client/src/components/molecules/WindowIcons/WindowIcons.css
@@ -4,7 +4,7 @@
     gap: 8px;
 }
 
-.window-icons-container{
+.window-icons-container.with-background{
     position: absolute;
     top: .8rem;
     left: .8rem;
