--- a/client/src/pages/protected/Messages/Messages.css
+++ b/client/src/pages/protected/Messages/Messages.css
@@ -3,7 +3,8 @@
 .chat-main-container {
     display: flex;
     height: 100%;
-    border-radius: .5rem;
+    margin-top: 1rem;
+    border-radius: 2rem;
     background: var(--color-bg);
     overflow: hidden;
 }
